# impact

./: Cargo.toml  README.md
src/: error.rs  image_wrapper.rs  main.rs  packer.rs  path_glob.rs  rect.rs  serial.rs
src/bin_packs/: max_rects.rs  mod.rs
