[package]
name = "impact"
version = "0.1.0"
authors = ["Alic Szecsei <alszecse@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
failure = "0.1.6"
metrohash = "1.0.6"
image = "0.22.3"
glob = "0.3.0"
