[package]
name = "impact"
version = "0.3.0"
authors = ["Alic Szecsei <alszecse@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
metrohash = "1.0.6"
image = "0.22.3"
glob = "0.3.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
bincode = "1.2.0"
xml-rs = "0.8.0"
path-slash = "0.1.1"
humansize = "1.1.0"
log = "0.4.8"
fern = "0.5.9"
chrono = "0.4.10"
thiserror = "1.0.40"
