[package]
name = "impact"
version = "0.3.0"
authors = ["Alic Szecsei <alszecse@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
metrohash = "1.0.6"
image = "0.24.6"
glob = "0.3.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
bincode = "1.2.0"
xml-rs = "0.8.0"
path-slash = "0.2.1"
humansize = "2.1.3"
log = "0.4.8"
fern = "0.6.2"
chrono = "0.4.10"
thiserror = "1.0.40"
